# graflo

./: .cursorignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  LICENSE  README.md  mkdocs.yml  pyproject.toml  pytest.ini  run-tests.sh
.cursor/rules/: tests.mdc
.github/workflows/: build-docs.yml  pre-commit.yml  pypi-publish.yml
docker/: README.md  cleanup-all.sh  start-all.sh  stop-all.sh
docker/arango/: .env  docker-compose.yml
docker/falkordb/: .env  docker-compose.yml
docker/fuseki/: .env  docker-compose.yml  shiro.ini
docker/grafeo/: .env  docker-compose.yml
docker/memgraph/: .env  docker-compose.yml
docker/minio/: .env  docker-compose.yml
docker/nebula/: .env  docker-compose.yml
docker/neo4j/: .env  docker-compose.yml
docker/postgres/: .env  docker-compose.yml  mock_schema.sql
docker/tigergraph/: .env  docker-compose.yml
docs/: contributing.md  gen_pages.py  index.md
docs/_build/: gen_pages.py
docs/concepts/: api_connector.md  architecture_diagrams.md  backend_indexes.md  core_components.md  features_and_practices.md  graph_database_targets.md  graph_export_migration.md  index.md  ingestion_doc_errors.md  manifest_evolution.md  object_storage.md  runtime_connector_updates.md  table_connector_views.md  tigergraph_bulk_load.md  transforms.md
docs/examples/: example-1.md  example-10.md  example-11.md  example-12.md  example-13.md  example-14.md  example-15.md  example-2.md  example-3.md  example-4.md  example-5.md  example-6.md  example-7.md  example-8.md  example-9.md  index.md
docs/getting_started/: creating_manifest.md  creating_schema.md  installation.md  quickstart.md
docs/guides/: api_env_wiring.md  graph_db_migration.md  graph_export_and_replay.md  graph_namespace_and_schema.md  identity_inference.md  index.md  tigergraph_bulk_load.md
docs/model/: graflo_ontology.md
docs/reference/: architecture.md  cli.md  connection_models.md  data_source.md  db.md  filter.md  hq.md  index.md  migrate.md  object_storage.md  plot.md  rdf.md  util.md
graflo/: __init__.py  caster.py  connection_models.py  onto.py
run/: finance_ingest.sh
sh/: generate_examples_figs.sh
test/: conftest.py  test_caster.py  test_caster_doc_errors.py  test_caster_row_errors.py  test_connectors.py  test_filter_view.py  test_filters.py  test_filters_python.py  test_ingestion_datetime.py  test_location_index.py  test_patterns.py
(+764 files in other folders)
