[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [{email = "alexander@growgraph.dev", name = "Alexander Belikov"}]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython"
]
dependencies = [
  "SPARQLWrapper>=2.0.0",
  "click>=8.2.0,<9",
  "falkordb>=1.0.9",
  "ijson>=3.2.3,<4",
  "nebula3-python>=3.8.3",
  "nebula5-python>=5.2.1",
  "neo4j>=5.22.0,<6",
  "networkx~=3.3",
  "pandas-stubs==2.3.0.250703",
  "pandas>=2.0.3,<4",
  "psycopg2-binary>=2.9.11",
  "pydantic-settings>=2.12.0",
  "pydantic>=2.12.5",
  "pymgclient>=1.3.1",
  "python-arango>=8.1.2,<9",
  "rdflib>=7.0.0",
  "redis>=5.0.0",
  "requests>=2.31.0",
  "sqlalchemy>=2.0.0",
  "suthing>=0.5.1",
  "urllib3>=2.0.0",
  "xmltodict>=0.14.2,<0.15"
]
description = "A framework for transforming tabular (CSV, SQL) and hierarchical data (JSON, XML) into property graphs and ingesting them into graph databases (ArangoDB, Neo4j, TigerGraph, FalkorDB, Memgraph, NebulaGraph). Features automatic PostgreSQL schema inference."
name = "graflo"
readme = "README.md"
requires-python = ">=3.11"
version = "1.7.4"

[project.optional-dependencies]
dev = [
  "pre-commit>=4.2.0",
  "pytest>=9.0.2",
  "ty>=0.0.1a24"
]
docs = [
  "mkdocs-gen-files>=0.5.0",
  "mkdocs-glightbox>=0.4.0",
  "mkdocs-literate-nav>=0.6.2",
  "mkdocs-material>=9.6.12",
  "mkdocs-table-reader-plugin>=3.1.0",
  "mkdocs>=1.6.1",
  "mkdocstrings[python]>=0.29.1"
]
plot = [
  "pygraphviz>=1.14"
]

[project.scripts]
ingest = "graflo.cli.ingest:ingest"
manage_dbs = "graflo.cli.manage_dbs:manage_dbs"
migrate_schema = "graflo.cli.migrate_schema:migrate_schema"
plot_manifest = "graflo.cli.plot_manifest:plot_manifest"
xml2json = "graflo.cli.plot_schema:xml2json"

[project.urls]
Homepage = "https://github.com/growgraph/graflo"

[tool.hatch.build.targets.sdist]
include = ["graflo"]

[tool.hatch.build.targets.wheel]
include = ["graflo"]

[tool.pytest.ini_options]
markers = [
  "nebula: marks NebulaGraph integration tests (skipped unless --run-nebula is passed)",
  "performance: marks performance / stress tests (skipped unless --run-performance is passed)"
]
